--- a/pyproject.toml
+++ b/pyproject.toml
@@ -59,9 +59,9 @@ default-tag = "0.0.1"
 line-length = 120
 
 [tool.ruff]
-target-version = "py38"
+target-version = "py310"
 line-length = 120
-select = [
+lint.select = [
   "B",    # flake8-bugbear
   "C4",   # flake8-comprehensions
   "D",    # pydocstyle
@@ -92,7 +92,7 @@ select = [
   "W",    # pycodestyle warning
   "YTT",  # flake8-2020
 ]
-ignore = [
+lint.ignore = [
   "B023",    # Function definition does not bind loop variable
   "B028",    # No explicit stacklevel keyword argument found
   "B904",    # Within an except clause, raise exceptions with ...
@@ -109,9 +109,9 @@ ignore = [
   "RUF012",  # Disable checks for mutable class args. This is a non-problem.
   "SIM105",  # Use contextlib.suppress(OSError) instead of try-except-pass
 ]
-pydocstyle.convention = "google"
-isort.required-imports = ["from __future__ import annotations"]
-isort.split-on-trailing-comma = false
+lint.pydocstyle.convention = "google"
+lint.isort.required-imports = ["from __future__ import annotations"]
+lint.isort.split-on-trailing-comma = false
 
 [tool.ruff.per-file-ignores]
 "__init__.py" = ["F401"]
