--- a/.gitignore
+++ b/.gitignore
@@ -1,31 +1,121 @@
+# Byte-compiled / optimized / DLL files
 __pycache__/
-.DS_Store
-*.o
+*.py[cod]
+*$py.class
+
+# C extensions
 *.so
-*.pyc
+
+# Distribution / packaging
+.Python
+env/
+venv/
+ENV/
+env.bak/
+venv.bak/
+*.egg
+*.egg-info/
+dist/
+build/
+*.wheel
+
+# PyInstaller
+# Usually these files are written by a python script from a template
+# before PyInstaller builds the exe, so as to inject date/other infos into it.
+*.manifest
+*.spec
+
+# Installer logs
+pip-log.txt
+pip-delete-this-directory.txt
+
+# Unit test / coverage reports
+htmlcov/
+.tox/
+.nox/
+.coverage
+*.cover
+*.py,cover
+.hypothesis/
+pytest_cache/
+cover/
+
+# Translations
+*.mo
+*.pot
+
+# Django stuff:
+*.log
+local_settings.py
+db.sqlite3
+db.sqlite3-journal
+
+# Flask stuff:
+instance/
+.webassets-cache
+
+# Scrapy stuff:
+.scrapy
+
+# Sphinx documentation
+docs/_build/
+
+# PyBuilder
+target/
+
+# Jupyter Notebook
+.ipynb_checkpoints
+
+# IPython
+profile_default/
+ipython_config.py
+
+# pyenv
+.python-version
+
+# Celery
+celerybeat-schedule
+*.celerybeat-schedule
+
+# SageMath
+*.sage.py
+
+# Environments
+.env
+.env.*
+.spacy
+*.envrc
+
+# mypy
+.mypy_cache/
+.dmypy.json
+dmypy.json
+
+# Pyre
+.pyre/
+
+# VS Code
+.vscode/
+
+# IDEA
+.idea/
+
+# MacOS
+.DS_Store
+
+# Logs
+*.log
+
+# Temporary files
+*.tmp
+*.temp
+*.bak
 *.swp
 *.swo
-*.pyd
-*.c
-dist
-_build
-build
-.project
-.pydevproject
-.settings
-.externalToolBuilders
-.idea
-setuptools*
-.ipynb_checkpoints
-.cache
-.tox
-.eggs/
-.coverage
-.*_cache
-# VS Code
-.vscode/*
-_site
 
+# Windows
+Thumbs.db
+ehthumbs.db
 # Environments
 .env
 .venv
