--- a/pyproject.toml
+++ b/pyproject.toml
@@ -113,7 +113,7 @@ lint.pydocstyle.convention = "google"
 lint.isort.required-imports = ["from __future__ import annotations"]
 lint.isort.split-on-trailing-comma = false
 
-[tool.ruff.per-file-ignores]
+[tool.ruff.lint.per-file-ignores]
 "__init__.py" = ["F401"]
 "tests/*" = ["D"]
 "tasks.py" = ["D"]
