--- a/.github/workflows/linting.yml
+++ b/.github/workflows/linting.yml
@@ -20,7 +20,7 @@ jobs:
           python-version: ${{ matrix.python-version }}
       - name: Install dependencies
         run: |
-          pip install --quiet -r requirements-ci.txt
+          pip install ruff black mypy
       - name: ruff
         run: |
           ruff --version
