Install req via pip.

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,1 @@
-pandas==2.2.2
-plotly==5.24.1
-pymatgen==2025.1.24
-dash==2.18.2
-dash-core-components==2.0.0
-pymongo==4.6.1
+git@github.com:materialsvirtuallab/matpes.git
