--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,7 @@
-git+https://github.com/materialsvirtuallab/matpes.git
 numpy==1.26.4
 pymongo==4.11
 gunicorn==23.0.0
+dash==2.18.2
+dash-bootstrap-components==1.6.0
+plotly==6.0.0
+pymatgen==2025.1.24
