--- a/.github/workflows/linting.yml
+++ b/.github/workflows/linting.yml
@@ -28,7 +28,7 @@ jobs:
           ruff format --check .
 
       - name: mypy
-        run: mypy src
+        run: mypy .
 
       - name: pyright
         run: pyright
