Add progress bar for download.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,12 +17,13 @@ description = """Tools for working with MatPES."""
 readme = "README.md"
 requires-python = ">=3.10,<3.13"
 keywords = [
+    "potential energy surface",
+    "PES",
     "VASP",
     "analysis",
     "crystal",
     "materials",
     "science",
-    "structure",
     "ai",
     "ml"
 ]
@@ -39,11 +40,12 @@ classifiers = [
     "Topic :: Scientific/Engineering :: Chemistry",
     "Topic :: Scientific/Engineering :: Information Analysis",
     "Topic :: Scientific/Engineering :: Physics",
-    "Topic :: Software Development :: Libraries :: Python Modules",
 ]
 dependencies = [
     "pandas>=2",
-    "pymongo>=4.11"
+    "pymongo>=4.11",
+    "pymatgen",
+    "tqdm"
 ]
 version = "0.0.1"
 
