--- a/pyproject.toml
+++ b/pyproject.toml
@@ -132,6 +132,7 @@ ignore_missing_imports = true
 namespace_packages = true
 explicit_package_bases = true
 no_implicit_optional = false
+exclude = ["docs", "tasks.py"]
 
 [[tool.mypy.overrides]]
 module = ["requests.*", "tabulate.*"]
