--- a/pyproject.toml
+++ b/pyproject.toml
@@ -172,3 +172,8 @@ reportMissingImports = false
 reportMissingModuleSource = false
 reportInvalidTypeForm = false
 exclude = ["**/tests"]
+
+[dependency-groups]
+maintain = [
+    "pre-commit>=4.2.0",
+]
