--- a/pyproject.toml
+++ b/pyproject.toml
@@ -174,6 +174,10 @@ reportInvalidTypeForm = false
 exclude = ["**/tests"]
 
 [dependency-groups]
+lint = [
+    "mypy>=1.15.0",
+    "ruff>=0.11.2",
+]
 maintain = [
     "pre-commit>=4.2.0",
 ]
